# advent-of-code

2021/: package.json
2021/.devcontainer/: devcontainer.json
2021/c/: .gitignore  2101.c  2102.c  2103.c  CMakeLists.txt  README.md
2021/day-01/: index.js
2021/day-01/node/: index.js
2021/day-02/node/: index.js
2021/node/: package.json
2021/node/day-01/: index.js
2021/node/day-02/: index.js
2021/node/day-03/: index.js
2021/node/day-04/: index.js
2021/node/utils/: input.js  print.js
